Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36868

Minor issues with shrinking innodb_buffer_pool_size

    XMLWordPrintable

Details

    • Can result in unexpected behaviour
    • Hide
      After a successful shrinking of innodb_buffer_pool_size, there will be no message about it in the server error log.

      After a failed shrinking of innodb_buffer_pool_size, the adaptive hash index will not be re-enabled if innodb_adaptive_hash_index was ON when SET GLOBAL innodb_buffer_pool_size=... started to execute.
      Show
      After a successful shrinking of innodb_buffer_pool_size, there will be no message about it in the server error log. After a failed shrinking of innodb_buffer_pool_size, the adaptive hash index will not be re-enabled if innodb_adaptive_hash_index was ON when SET GLOBAL innodb_buffer_pool_size=... started to execute.

    Description

      This was originally found while I was diagnosing MDEV-36863.

      After a successful shrinking of innodb_buffer_pool_size, there will be no message about it in the server error log.

      After a failed shrinking of innodb_buffer_pool_size, the adaptive hash index will not be re-enabled if innodb_adaptive_hash_index was ON when SET GLOBAL innodb_buffer_pool_size=... started to execute.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Marko Mäkelä Marko Mäkelä
              Debarun Banerjee Debarun Banerjee (Inactive)
              Saahil Alam Saahil Alam
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 6.5h
                  6.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.